--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node ./index.js input.txt",
+    "start": "babel-node ./index.js",
     "test": "npm run lint && npm run test:unit",
     "test:unit": "mocha --opts test/unit/mocha.opts test/unit/**/*_spec.js",
-		"lint": "eslint **/*.js",
-		"lint:fix": "eslint **/*.js --fix"
+		"lint": "eslint '**/*.js'",
+		"lint:fix": "eslint '**/*.js' --fix"
   },
   "author": "Gustavo M T Borges",
   "license": "ISC",
