--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "babel-node ./index.js",
     "test": "npm run lint && npm run test:unit",
     "test:unit": "mocha --opts test/unit/mocha.opts test/unit/**/*_spec.js",
-		"lint": "eslint '**/*.js'",
-		"lint:fix": "eslint '**/*.js' --fix"
+		"lint": "./node_modules/eslint/bin/eslint.js '**/*.js'",
+		"lint:fix": "./node_modules/eslint/bin/eslint.js '**/*.js' --fix"
   },
   "author": "Gustavo M T Borges",
   "license": "ISC",
